--- a/index.html
+++ b/index.html
@@ -86,28 +86,28 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
+            <div data-date="January 2021 until present">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                   Technician of TOT Outsourcing Services Company Limited.
+		    </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="June 2018 to January 2021">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                  IT Officer of Kata Palm Group (Kata Palm Resort & Spa, Rawai Palm Beach Resort and Maikhao Palm Beach Resort .
+		    </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="March to May 2018">
                 <h3>Employer Name</h3>
                 <h4>Job Title</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                   Trainee-IT Department of Kata Palm Group (Kata Palm Resort & Spa, Rawai Palm Beach Resort and Maikhao Palm Beach Resort.
+		    </p>
             </div>
         </div>
     </div>
